<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">买房51</string>
    <string name="action_settings">设置</string>
    <string name="action_websearch">搜索</string>
    <string name="action_share">分享</string>

    <string name="index">首页</string>
    <string name="looking_for_apartment">快速找房</string>
    <string name="member_center">个人中心</string>
    <string name="cloud_phone">云拷客</string>
    <string name="more">更多</string>
    <string name="apartment_news">房源快报</string>
    <string name="market_info">楼市资讯</string>
    <string name="member_special">内部专栏</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="save_session">记住我</string>
    <string name="wanna_go">我想去</string>

    <string name="review_project">项目审批</string>
    <string name="community">社区</string>
    <string name="calculator">佣金计算器</string>

    <string name="my_project">我的项目</string>
    <string name="my_inbox">我的信箱</string>
    <string name="my_reminder">我的预约</string>
    <string name="create_project">创建项目</string>
    <string name="create_reminder">创建备忘</string>
    <string name="update_reminder">修改备忘</string>

    <string name="project_info">企业公告</string>
    <string name="sales_mission">销售任务</string>

    <!-- used for popup window -->
    <string name="menu_settings">Settings</string>
    <string name="no_data">没有找到符合条件的房源</string>
</resources>
