<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.djmedia.maifang51.activity.MainActivity" >

    <item android:id="@+id/menu_item_search"
        android:title="@string/action_websearch"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/menu_item_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_share"
        android:showAsAction="never"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
</menu>
