<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/id_slide_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ViewFlipper android:id="@+id/id_view_flipper"
            android:fadingEdge="none"
            android:fadingEdgeLength="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <RadioGroup android:id="@+id/id_top_page"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/id_view_flipper"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/id_news_button"
            android:text="@string/apartment_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/id_info_button"
            android:text="@string/market_info"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/id_special_button"
            android:text="@string/member_special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
