<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/id_member_center_img"
        android:src="@drawable/ic_books"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/id_member_center_name"
        android:layout_toRightOf="@id/id_member_center_img"
        android:layout_alignTop="@id/id_member_center_img"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/id_member_center_description"
        android:layout_below="@id/id_member_center_name"
        android:layout_alignLeft="@id/id_member_center_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/id_member_center_mine_button"
        android:layout_below="@id/id_member_center_img"
        android:text="@string/my_project"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/id_member_center_mail_button"
        android:layout_below="@id/id_member_center_mine_button"
        android:text="@string/my_inbox"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/id_member_center_remind_button"
        android:layout_below="@id/id_member_center_mail_button"
        android:text="@string/my_reminder"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/id_logout"
        android:layout_below="@id/id_member_center_remind_button"
        android:text="logout"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
